@@ -298,7 +298,7 @@ function is_parent_box($curbox_name, $parbox_name) {
 function ListBoxes ($boxes, $j=0 ) {
     global $data_dir, $username, $startmessage, $color, $unseen_notify, $unseen_type,
            $move_to_trash, $trash_folder, $collapse_folders, $imapConnection, 
-           $use_icons, $icon_theme;
+           $use_icons, $icon_theme, $use_special_folder_color;
 
     if (!isset($boxes) || empty($boxes))
         return;
@@ -421,7 +421,7 @@ function ListBoxes ($boxes, $j=0 ) {
 
     $font = '';
     $fontend = '';
-    if ($boxes->is_special) {
+    if ($use_special_folder_color && $boxes->is_special) {
         $font = "<font color=\"$color[11]\">";
         $fontend = "</font>";
     }
@@ -447,7 +447,7 @@ function ListBoxes ($boxes, $j=0 ) {
 
 function ListAdvancedBoxes ($boxes, $mbx, $j='ID.0000' ) {
     global $data_dir, $username, $startmessage, $color, $unseen_notify, $unseen_type,
-           $move_to_trash, $trash_folder, $collapse_folders;
+           $move_to_trash, $trash_folder, $collapse_folders, $use_special_folder_color;
 
     if (!isset($boxes) || empty($boxes))
         return;
@@ -502,7 +502,7 @@ function ListAdvancedBoxes ($boxes, $mbx, $j='ID.0000' ) {
     if ($unseen > 0) { $pre .= '<b>'; }
 
     /* color special boxes */
-    if ($boxes->is_special) {
+    if ($use_special_folder_color && $boxes->is_special) {
         $pre .= "<font color=\"$color[11]\">";
         $end .= '</font>';
     }
